--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,11 @@
       }
     }
   </style>
-  <link href="https://lib.baomitu.com/element-ui/2.13.2/theme-chalk/index.css" rel="stylesheet">
-  <link href="https://lib.baomitu.com/monaco-editor/0.19.3/min/vs/editor/editor.main.css" rel="stylesheet">
-  <script src="https://lib.baomitu.com/vue/2.6.11/vue<%= process.env.NODE_ENV === 'production' ? '.min' : ''%>.js"></script>
-  <script src="https://lib.baomitu.com/vue-router/3.1.3/vue-router.min.js"></script>
-  <script src="https://lib.baomitu.com/element-ui/2.13.2/index.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.19.3/min/vs/editor/editor.main.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue<%= process.env.NODE_ENV === 'production' ? '.min' : ''%>.js"></script>
+  <script src="https://unpkg.com/vue-router@3.6.5/dist/vue-router.min.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </head>
 
 <body>
