--- a/public/preview.html
+++ b/public/preview.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>form-generator-preview</title>
-    <link href="https://lib.baomitu.com/element-ui/2.13.2/theme-chalk/index.css" rel="stylesheet">
-    <script src="https://lib.baomitu.com/vue/2.6.11/vue.min.js"></script>
-    <script src="https://lib.baomitu.com/vue-router/3.1.3/vue-router.min.js"></script>
-    <script src="https://lib.baomitu.com/element-ui/2.13.2/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/vue-router@3.6.5/dist/vue-router.min.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <style>
       body{
         margin: 0;
